@@ -18,30 +18,16 @@ here that isn't, send a patch for this HTML file to the <a
 href="mailto:java-patches@gcc.gnu.org">java-patches</a> list.
 </p>
 
-<br />
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
-jar support
- </th>
-</tr>
-</table>
-<br />
+
+<h2>jar support</h2>
 
 <p>
 Modify gcj to obey the constraints layed out by the jar file
 manifest file.
 </p>
 
-<br />
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
-Plugin for Mozilla
- </th>
-</tr>
-</table>
-<br />
+
+<h2>Plugin for Mozilla</h2>
 
 <p>
 <a href="http://www.mozilla.org/">Mozilla</a> is open-source web browser,
@@ -52,15 +38,8 @@ plugged into Mozilla.  A gij based plugin would be very nice indeed
 (gijzilla?).
 </p>
 
-<br />
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
-Benchmark infrastructure
- </th>
-</tr>
-</table>
-<br />
+
+<h2>Benchmark infrastructure</h2>
 
 <p>
 Measuring performance is tricky business.  We currently do all our
@@ -75,18 +54,12 @@ recently released a set of "micro benchmarks" called jMocha.
 Building some infrastructure around these would be incredibly useful.
 </p>
 
-<br />
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
-Performance improvements
- </th>
-</tr>
-</table>
-<br />
 
-There are a few concrete performance improvements that we already know
-we want:
+<h2>Performance improvements</h2>
+
+<p>There are a few concrete performance improvements that we already know
+we want:</p>
+
 	<ul>
 	  <li><p>If an object or array is allocated in static code that is
           executed at most once (i.e. not in a loop or in a non-private
@@ -120,15 +93,8 @@ we want:
 	  </p></li>
 	</ul>
 
-<br />
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
-Compiler improvements
- </th>
-</tr>
-</table>
-<br />
+
+<h2>Compiler improvements</h2>
 
 	  <ul>
 	    <li>We'd like gcj to do tree-level inlining like the C++
@@ -187,15 +153,9 @@ Compiler improvements
 	    second one is higher priority.)</li>
 	  </ul>
 
-<br />
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
-Runtime improvements
- </th>
-</tr>
-</table>
-<br />
+
+<h2>Runtime improvements</h2>
+
 	  <ul>
 	    <li>Write a program to convert existing locale data into a
 	    format we can use.</li>
