@@ -1,3 +1,8 @@
+2011-04-26  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* projects.html: Use regular <h2> markup for section headers
+	instead of fake tables.
+
 2011-04-25  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* contrib.html: Use regular <h2> markup for section headers
